# alloc-inspector

./: .gitignore  .gitmodules  README.md  common.py  gather-results.py  inspect-public-repos.py  process-results.py  profile-repos.py  results-withou-errors.csv  results.csv
inspector/: CMakeLists.txt
inspector/include/: parsers.hpp  results.hpp  stack-inspector-launcher.hpp  util.hpp  utils.hpp  valgrind-launcher.hpp
inspector/src/: inspector.cpp  main.cpp  stack-inspector-exec.cpp
inspector/stack-inspector/: CMakeLists.txt
inspector/stack-inspector/src/: main.cpp  stack_inspector.cpp
inspector/stack-inspector/test/: CMakeLists.txt
inspector/stack-inspector/test/python/: loop-variable-with-func-call.py  single-func-call.py  single-main.py  struct-variable-with-func-call.py  variable-with-func-call.py
inspector/stack-inspector/test/python/utils/: test_util.py
inspector/stack-inspector/test/resources/test-apps/: single-func-call.cpp  single-main.cpp
profiler/: CMakeLists.txt
profiler/src/: stack_inspector.cpp
profiler/test/: CMakeLists.txt
profiler/test/python/: local-variable.py  loop-variable.py  single-main.py
profiler/test/python/utils/: test_util.py
profiler/test/resources/test-apps/: local-variable.cpp  loop-variable-with-func-call.cpp  loop-variable.cpp  single-main.cpp  struct-variable-with-func-call.cpp  variable-with-func-call.cpp
results/: repo-results.csv  results.csv
results/c/: Collections-C.csv  cJSON.csv  cmark.csv  dynamorio.csv  fastfetch.csv  final-c.csv  final-old.csv  final.csv  jq.csv  json-c.csv  libevent_tmp.csv  libsndfile.csv  libuv_tmp.csv  mimalloc.csv  nanomsg.csv  nanomsg_2.csv  onion.csv  openssl.csv  repo-summary-c.csv  results.csv  s2n-tls-old.csv  s2n-tls.csv  s2n-tls_tmp.csv  summary-c.csv  zip.csv  zlog.csv
results/c++/: MyTinySTL.csv  MyTinySTL_tmp.csv  OpenCC.csv  benchmark.csv  final-c++.csv  final.csv  fmt.csv  fmt_2.csv  glog.csv  json.csv  leveldb.csv  leveldb_2.csv  magic_enum.csv  repo-summary-c++.csv  snappy.csv  spdlog.csv  spdlog_2.csv  summary-c++.csv  yaml-cpp.csv
