add_library(stack_inspector SHARED src/stack_inspector.cpp)
if (NOT DEFINED DynamoRIO_DIR OR "${DynamoRIO_DIR}" STREQUAL "DynamoRIO_DIR-NOTFOUND")
    set(DynamoRIO_DIR ${DYNAMORIO_HOME}/cmake)
endif (NOT DEFINED DynamoRIO_DIR OR "${DynamoRIO_DIR}" STREQUAL "DynamoRIO_DIR-NOTFOUND")
find_package(DynamoRIO)
if (NOT DynamoRIO_FOUND)
    message(FATAL_ERROR "DynamoRIO package required to build")
endif(NOT DynamoRIO_FOUND)
use_DynamoRIO_extension(stack_inspector drmgr)
use_DynamoRIO_extension(stack_inspector droption)
configure_DynamoRIO_client(stack_inspector)

add_subdirectory(test)
